# devops-tools

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  Vagrantfile  docker-compose.psql.yml  docker.Vagrantfile  pyproject.toml  requirements.txt
ansible/: README.md  ansible.cfg.on-prem
ansible/inventories/: inventory.yml
ansible/playbooks/: citus.setup.yml  repmgr.node_rejoin.yml  repmgr.setup.yml
build_env/utils/: setup_env.sh
config/: influx-configs
data/: influxd.bolt
data/certificates/: dhparam.pem  ldap.crt  ldap.key
deployment/envs/: k3s-env.bash  vault-dev.bash
docker-composes/: docker-compose.claude-memory.yml  docker-compose.openldap.yml  docker-compose.vault.yml
dockerfiles/: common.Dockerfile  kubespray.Dockerfile  vagrant.Dockerfile
docs/: vagrant-clean-architecture-tracker.md  vagrant-usage-guide.md
kubernetes-templates/: node-local-dns.yml
packer/: .gitignore  README.md
scripts/: materialize-dataless.sh
services/metric-collector/: Dockerfile  collect_metrics.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
services/metric-collector/config/: config.py
services/metric-collector/internal/application/metrics/: create_metrics_handler.py
services/metric-collector/prometheus/: prometheus.yml
services/metric-collector/scripts/: run.sh
services/metric-collector/src/collect_metrics/: __init__.py
services/metric-collector/src/metric_collector/: __init__.py
ubuntu/: ssh.sh
vagrant/: Vagrantfile  docker-kubespray.Vagrantfile  docker.Vagrantfile  virtualbox.Vagrantfile
(+721 files in other folders)
