[project]
name = "metric-collector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "prometheus-client>=0.20.0",
    "fastapi>=0.112.2",
    "psutil>=6.0.0",
    "gunicorn>=23.0.0",
    "unicorn>=2.0.1.post1",
    "uvicorn>=0.30.6",
    "loguru>=0.7.2",
    "pydantic-settings>=2.4.0",
    "sqlalchemy>=2.0.32",
    "psycopg2-binary>=2.9.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
